Milestone towards tracking config files on git. Waiting on true-og/SubstAgent update